--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Sabores Argentinos</h1>
+    <h1>Los chicos argentinos</h1>
     <nav>
       <a href="#inicio">Inicio</a>
       <a href="#menu">Menú</a>
