--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </section>
   <section id="sobre-nosotros">
     <h2>Sobre Nosotros</h2>
-    <p>Somos Damián y Ana, dos argentinos que llegamos a Olesa de Montserrat para compartir los sabores de nuestra tierra. En Sabores Argentinos, cada plato está hecho con amor, utilizando recetas tradicionales que nos recuerdan a casa. Queremos que nuestros clientes internacionales en Barcelona disfruten de la calidez y el sabor de Argentina en cada bocado.</p>
+    <p>Somos Damián y Ana, dos argentinos que llegamos a Olesa de Montserrat para compartir los sabores de nuestra tierra. En Los chicos argentinos, cada plato está hecho con amor, utilizando recetas tradicionales que nos recuerdan a casa. Queremos que nuestros clientes internacionales en Barcelona disfruten de la calidez y el sabor de Argentina en cada bocado.</p>
   </section>
   <section id="contacto">
     <h2>Contáctanos</h2>
