Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="mailto:saboresargentinos@gmail.com" class="cta-button">Escríbenos</a>
   </section>
   <footer>
-<a href="https://wa.me/5491234567890?text=¡Hola! Quiero saber más sobre Sabores Argentinos" class="whatsapp-btn" target="_blank">
+<a href="https://wa.me/5491234567890?text=¡Hola! Quiero saber más sobre Los chicos argentinos" class="whatsapp-btn" target="_blank">
     <i class="fab fa-whatsapp"></i> Contactanos por WhatsApp
 </a>
     <p>© 2025 Sabores Argentinos - Damián y Ana</p>
