Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       <a href="#contacto">Contacto</a>
     </nav>
   </header>
+<section class="main-content">
+    <h1>Sabores Argentinos</h1>
+    <p>Sabores Argentinos te da la bienvenida...</p>
+    <a href="https://wa.me/5491234567890?text=¡Hola! Quiero saber más sobre Sabores Argentinos" class="whatsapp-btn" target="_blank">
+        <i class="fab fa-whatsapp"></i> Contactanos por WhatsApp
+    </a>
+</section>
   <section id="inicio">
     <h2>Los Mejores Sabores de Argentina</h2>
     <img src="comida-argentina.jpg" alt="Plato tradicional argentino">
@@ -46,9 +53,6 @@
     <a href="mailto:saboresargentinos@gmail.com" class="cta-button">Escríbenos</a>
   </section>
   <footer>
-<a href="https://wa.me/5491234567890?text=¡Hola! Quiero saber más sobre Los chicos argentinos" class="whatsapp-btn" target="_blank">
-    <i class="fab fa-whatsapp"></i> Contactanos por WhatsApp
-</a>
     <p>© 2025 Sabores Argentinos - Damián y Ana</p>
   </footer>
 </body>
