Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Comida argentina tradicional en Olesa de Montserrat, Barcelona, por Damián y Ana. Sabores auténticos para clientes internacionales.">
-  <meta name="keywords" content="comida argentina, Olesa de Montserrat, Rambla de Catalunya, Damián y Ana, Barcelona">
-  <title>Sabores Argentinos - Damián y Ana</title>
+  <meta name="keywords" content="comida argentina, Olesa de Montserrat, Rambla de Catalunya, Damián y Anabel, Barcelona">
+  <title>Los chicos argentinos- Damian y Anabel</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,15 +21,15 @@
   </header>
 <section class="main-content">
     <h1>Sabores Argentinos</h1>
-    <p>Sabores Argentinos te da la bienvenida...</p>
-    <a href="https://wa.me/5491234567890?text=¡Hola! Quiero saber más sobre Sabores Argentinos" class="whatsapp-btn" target="_blank">
+    <p>Los chicos argentinos te dan la bienvenida...</p>
+    <a href="https://wa.me/5491234567890?text=¡Hola! Quiero saber más sobre Los chicos argentinos" class="whatsapp-btn" target="_blank">
         <i class="fab fa-whatsapp"></i> Contactanos por WhatsApp
     </a>
 </section>
   <section id="inicio">
     <h2>Los Mejores Sabores de Argentina</h2>
     <img src="comida-argentina.jpg" alt="Plato tradicional argentino">
-    <p>Damián y Ana te traen auténtica comida argentina tradicional, preparada con amor para clientes internacionales en Barcelona.</p>
+    <p>Damián y Ana te traen auténtica comida argentina tradicional, preparada con amor para clientes tradicionales en Barcelona.</p>
   </section>
   <section id="menu">
     <h2>Nuestro Menú</h2>
@@ -43,7 +43,7 @@
   </section>
   <section id="sobre-nosotros">
     <h2>Sobre Nosotros</h2>
-    <p>Somos Damián y Ana, dos argentinos que llegamos a Olesa de Montserrat para compartir los sabores de nuestra tierra. En Los chicos argentinos, cada plato está hecho con amor, utilizando recetas tradicionales que nos recuerdan a casa. Queremos que nuestros clientes internacionales en Barcelona disfruten de la calidez y el sabor de Argentina en cada bocado.</p>
+    <p>Somos Damián y Ana, dos argentinos que llegamos a Olesa de Montserrat para compartir los sabores de nuestra tierra. En Los chicos argentinos, cada plato está hecho con amor, utilizando recetas tradicionales que nos recuerdan a casa. Queremos que nuestros clientes disfruten de la calidez y el sabor de Argentina en cada bocado.</p>
   </section>
   <section id="contacto">
     <h2>Contáctanos</h2>
@@ -53,7 +53,7 @@
     <a href="mailto:saboresargentinos@gmail.com" class="cta-button">Escríbenos</a>
   </section>
   <footer>
-    <p>© 2025 Sabores Argentinos - Damián y Ana</p>
+    <p>©2025•Los chicos argentinos - Developed by Carlos Álvarez</p>
   </footer>
 </body>
 </html>
