Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <a href="mailto:saboresargentinos@gmail.com" class="cta-button">Escríbenos</a>
   </section>
   <footer>
-    <p>©2025•Los chicos argentinos - Developed by Carlos Álvarez</p>
+    <p><strong>©2025•Los chicos argentinos</strong>- Developed by Carlos Álvarez</p>
   </footer>
 </body>
 </html>
