Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Comida argentina tradicional en Olesa de Montserrat, Barcelona, por Damián y Ana. Sabores auténticos para clientes internacionales.">
+  <meta name="description" content="Comida argentina tradicional en Olesa de Montserrat, Barcelona, por Damián y Anabel. Sabores auténticos para clientes internacionales.">
   <meta name="keywords" content="comida argentina, Olesa de Montserrat, Rambla de Catalunya, Damián y Anabel, Barcelona">
   <title>Los chicos argentinos- Damian y Anabel</title>
   <link rel="stylesheet" href="styles.css">
@@ -22,7 +22,7 @@
   <section id="inicio">
     <h2>Los Mejores Sabores de Argentina</h2>
     <img src="comida-argentina.jpg" alt="Plato tradicional argentino">
-    <p>Damián y Ana te traen auténtica comida argentina tradicional, preparada con amor para clientes tradicionales en Barcelona.</p>
+    <p>Damián y Anabel te traen auténtica comida argentina tradicional, preparada con amor para clientes tradicionales en Barcelona.</p>
   </section>
   <section id="menu">
     <h2>Nuestro Menú</h2>
@@ -36,7 +36,7 @@
   </section>
   <section id="sobre-nosotros">
     <h2>Sobre Nosotros</h2>
-    <p>Somos Damián y Ana, dos argentinos que llegamos a Olesa de Montserrat para compartir los sabores de nuestra tierra. En Los chicos argentinos, cada plato está hecho con amor, utilizando recetas tradicionales que nos recuerdan a casa. Queremos que nuestros clientes disfruten de la calidez y el sabor de Argentina en cada bocado.</p>
+    <p>Somos Damián y Anabel, dos argentinos que llegamos a Olesa de Montserrat para compartir los sabores de nuestra tierra. En Los chicos argentinos, cada plato está hecho con amor, utilizando recetas tradicionales que nos recuerdan a casa. Queremos que nuestros clientes disfruten de la calidez y el sabor de Argentina en cada bocado.</p>
   </section>
   <section id="contacto">
     <h2>Contáctanos</h2>
@@ -47,13 +47,12 @@
   </section>
 <section class="main-content">
     <h1>Sabores Argentinos</h1>
-    <p>Los chicos argentinos te dan la bienvenida...</p>
     <a href="https://wa.me/5491234567890?text=¡Hola! Quiero saber más sobre Los chicos argentinos" class="whatsapp-btn" target="_blank">
-        <i class="fab fa-whatsapp"></i> Contactanos por WhatsApp
+        <i class="fab fa-whatsapp"></i> Contáctanos por WhatsApp
     </a>
 </section>
   <footer>
-    <p><strong>©2025•Los chicos argentinos</strong>- Developed by Carlos Álvarez</p>
+    <p><strong>©2025•Los chicos argentinos</strong>•</p>
   </footer>
 </body>
 </html>
