Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p>📍 Rambla de Catalunya, 60, 08640 Olesa de Montserrat, Barcelona</p>
     <p>🕒 Horario: Miércoles a Domingo, 12:00 - 22:00</p>
     <p>📧 Email: <a href="mailto:saboresargentinos@gmail.com">saboresargentinos@gmail.com</a></p>
-    <a href="mailto:saboresargentinos@gmail.com" class="cta-button">Escríbenos</a>
+    <a href="mailto:loschicos@argentinos.com" class="cta-button">Escríbenos</a>
   </section>
 <section class="main-content">
     <h1>Sabores Argentinos</h1>
