--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
         <i class="fab fa-whatsapp"></i> Contáctanos por WhatsApp
     </a>
 </section>
+<section class="join-us">
+    <div class="join-us-content">
+        <h2>¡Únete a Sabores Argentinos!</h2>
+        <p>Lleva nuestros sabores a tu ciudad y forma parte de nuestra pasión por la comida argentina. ¿Quieres abrir una franquicia, colaborar en eventos o distribuir nuestras empanadas y pizzas? ¡Contáctanos y hagamos crecer esta aventura juntos!</p>
+        <a href="https://wa.me/5491234567890?text=¡Hola! Quiero unirme a Sabores Argentinos y llevar sus sabores a mi ciudad" class="whatsapp-btn" target="_blank">
+            <i class="fab fa-whatsapp"></i> Contáctanos
+        </a>
+    </div>
+</section>
   <footer>
     <p><strong>©2025•Los chicos argentinos</strong>•</p>
   </footer>
