--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
 </head>
 <body>
   <header>
-    <h1>Los chicos argentinos</h1>
-    <nav>
-      <a href="#inicio">Inicio</a>
-      <a href="#menu">Menú</a>
-      <a href="#sobre-nosotros">Sobre Nosotros</a>
-      <a href="#contacto">Contacto</a>
+    <div class="logo">
+        <img src="img/logo.png" alt="Logo Sabores Argentinos">
+    </div>
+    <nav id="nav-menu" class="nav-menu">
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="menu.html">Menú</a></li>
+            <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
     </nav>
-  </header>
+    <div class="hamburger" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</header>
   <section id="inicio">
     <h2>Los Mejores Sabores de Argentina</h2>
     <img src="comida-argentina.jpg" alt="Plato tradicional argentino">
