--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sabores Argentinos - Disfruta de la auténtica cocina argentina en Buenos Aires.">
-    <title>Sabores Argentinos - Inicio</title>
+    <meta name="description" content="Los chicos argentinos - Disfruta de la auténtica cocina argentina en Olesa de Montserrat.">
+    <title>Los chicos argentinos - Inicio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="Logo Sabores Argentinos">
+            <img src="img/logo.png" alt="Logo">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -40,8 +40,8 @@
                     <button onclick="cambiarImagen(1)">&#10095;</button>
                 </div>
             </div>
-            <h1>Bienvenidos a Sabores Argentinos</h1>
-            <p>Descubre la pasión y el sabor de la cocina argentina en el corazón de Buenos Aires.</p>
+            <h1>Bienvenidos a Los chicos argentinos</h1>
+            <p>Descubre la pasión y el sabor de la cocina argentina en Olesa de Montserrat, BCN</p>
             <a href="menu.html" class="btn">Ver Menú</a>
         </section>
     </main>
@@ -52,9 +52,9 @@
                 <img src="img/logo.png" alt="Logo Sabores Argentinos">
             </div>
             <div class="footer-info">
-                <p>Av. Corrientes 1234, Buenos Aires, Argentina</p>
-                <p>Tel: +54 11 1234-5678</p>
-                <p>Email: info@saboresargentinos.com</p>
+                <p>Rambla de Catalunya, 60, 08640 (Olesa de Montserrat)</p>
+                <p>Tel: +34</p>
+                <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
                 <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
@@ -62,7 +62,7 @@
                 <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
             </div>
         </div>
-        <p class="footer-copy">© 2025 Sabores Argentinos. Todos los derechos reservados.</p>
+        <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados·.</p>
     </footer>
 
     <script src="script.js"></script>
