--- a/contacto.html
+++ b/contacto.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contáctanos en Sabores Argentinos para reservas o consultas.">
-    <title>Contacto - Sabores Argentinos</title>
+    <meta name="description" content="Contáctanos en Los chicos argentinos para reservas o consultas.">
+    <title>Contacto - Los chicos argentinos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="Logo Sabores Argentinos">
+            <img src="img/logo.png" alt="Logo">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -45,9 +45,9 @@
                 </div>
                 <div class="info-contacto">
                     <h2>Información de Contacto</h2>
-                    <p><strong>Dirección:</strong> Av. Corrientes 1234, Buenos Aires, Argentina</p>
-                    <p><strong>Teléfono:</strong> +54 11 1234-5678</p>
-                    <p><strong>Email:</strong> info@saboresargentinos.com</p>
+                    <p><strong>Dirección:</strong> Rbla. de Catalunya 60, Olesa de Montserrat, Barcelona</p>
+                    <p><strong>Teléfono:</strong> +34</p>
+                    <p><strong>Email:</strong> info@loschicosargentinos.com</p>
                     <h3>Síguenos en redes sociales</h3>
                     <div class="redes-sociales">
                         <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
@@ -62,12 +62,12 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <img src="img/logo.png" alt="Logo Sabores Argentinos">
+                <img src="img/logo.png" alt="Logo">
             </div>
             <div class="footer-info">
-                <p>Av. Corrientes 1234, Buenos Aires, Argentina</p>
-                <p>Tel: +54 11 1234-5678</p>
-                <p>Email: info@saboresargentinos.com</p>
+                <p>Rbla. de Catalunya 60, Olesa de MOntserrat, Barcelona</p>
+                <p>Tel: +34</p>
+                <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
                 <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
@@ -75,7 +75,7 @@
                 <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
             </div>
         </div>
-        <p class="footer-copy">© 2025 Sabores Argentinos. Todos los derechos reservados.</p>
+        <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
     </footer>
 
     <script src="script.js"></script>
