--- a/menu.html
+++ b/menu.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora el menú de Sabores Argentinos con platos tradicionales.">
-    <title>Menú - Sabores Argentinos</title>
+    <meta name="description" content="Explora el menú de Los chicos argentinos con platos tradicionales.">
+    <title>Menú - Los chicos argentinos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,12 +36,12 @@
                     <ul>
                         <li>
                             <h3>Empanadas Criollas</h3>
-                            <p>Rellenas de carne picada, cebolla, huevo y especias. (2 unidades)</p>
+                            <p>Rellenas de  <bold>carne picada</bold>, <bold>cebolla</bold>,<bold> huevo y especias.</bold></p>
                             <span>$1500</span>
                         </li>
                         <li>
                             <h3>Provoleta</h3>
-                            <p>Queso provolone fundido con orégano y chimichurri.</p>
+                            <p>Queso provolone fundido con <bold>orégano y chimichurri.</bold></p>
                             <span>$2000</span>
                         </li>
                     </ul>
@@ -56,7 +56,7 @@
                         </li>
                         <li>
                             <h3>Milanesa Napolitana</h3>
-                            <p>Con salsa de tomate, mozzarella y guarnición a elección.</p>
+                            <p>Con <bold>salsa de tomate, mozzarella y guarnición</bold> a elección.</p>
                             <span>$3800</span>
                         </li>
                     </ul>
@@ -66,12 +66,12 @@
                     <ul>
                         <li>
                             <h3>Flan Casero</h3>
-                            <p>Con dulce de leche y crema chantilly.</p>
+                            <p>Con <bold>dulce de leche y crema chantilly.</bold></p>
                             <span>$1200</span>
                         </li>
                         <li>
                             <h3>Alfajor de Maicena</h3>
-                            <p>Relleno de dulce de leche y coco rallado.</p>
+                            <p>Relleno de <bold>dulce de leche y coco rallado.</bold></p>
                             <span>$800</span>
                         </li>
                     </ul>
@@ -86,7 +86,7 @@
                         </li>
                         <li>
                             <h3>Fernet con Cola</h3>
-                            <p>Clásico argentino, servido con hielo.</p>
+                            <p>Clásico argentino, <bold>servido con hielo.</bold></p>
                             <span>$1000</span>
                         </li>
                     </ul>
@@ -98,12 +98,12 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <img src="img/logo.png" alt="Logo Sabores Argentinos">
+                <img src="img/logo.png" alt="Logo">
             </div>
             <div class="footer-info">
-                <p>Av. Corrientes 1234, Buenos Aires, Argentina</p>
-                <p>Tel: +54 11 1234-5678</p>
-                <p>Email: info@saboresargentinos.com</p>
+                <p>Rbla. de Catalunya, Olesa de Montserrat, Barcelona</p>
+                <p>Tel: +34</p>
+                <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
                 <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
@@ -111,7 +111,7 @@
                 <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
             </div>
         </div>
-        <p class="footer-copy">© 2025 Sabores Argentinos. Todos los derechos reservados.</p>
+        <p class="footer-copy">©·2025·Los chcios argentinos.·Todos los derechos reservados.·</p>
     </footer>
 
     <script src="script.js"></script>
