--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Conoce la historia y misión de Sabores Argentinos.">
-    <title>Sobre Nosotros - Sabores Argentinos</title>
+    <title>Sobre Nosotros - Los chicos argentinos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="Logo Sabores Argentinos">
+            <img src="img/logo.png" alt="Logo">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -33,7 +33,7 @@
             <div class="sobre-contenedor">
                 <div class="historia">
                     <h2>Nuestra Historia</h2>
-                    <p>Sabores Argentinos nació en 2010 con la pasión de compartir la rica tradición culinaria de Argentina. Fundado por la familia González, nuestro restaurante busca ofrecer platos auténticos preparados con ingredientes frescos y recetas transmitidas de generación en generación.</p>
+                    <p>Los chicos argentinos nació en 2010 con la pasión de compartir la rica tradición culinaria de Argentina. Fundado por la familia González, nuestro restaurante busca ofrecer platos auténticos preparados con ingredientes frescos y recetas transmitidas de generación en generación.</p>
                     <p>Desde nuestras empanadas criollas hasta el asado perfectamente cocido, cada bocado cuenta una historia de la cultura argentina.</p>
                 </div>
                 <div class="mision">
