--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Los chicos argentinos - Disfruta de la auténtica cocina argentina en Olesa de Montserrat.">
@@ -66,5 +67,8 @@
     </footer>
 
     <script src="script.js"></script>
+    <a href="https://wa.me/1234567890?text=¡Hola!%20Quiero%20más%20información%20sobre%20Sabores%20Argentinos" class="whatsapp-btn" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
 </body>
 </html>
