--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conoce la historia y misión de Sabores Argentinos.">
+    <meta name="description" content="Conoce la historia y objetivos de Los chicos argentinos.">
     <title>Sobre Nosotros - Los chicos argentinos</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -33,17 +33,17 @@
             <div class="sobre-contenedor">
                 <div class="historia">
                     <h2>Nuestra Historia</h2>
-                    <p>Los chicos argentinos nació en 2010 con la pasión de compartir la rica tradición culinaria de Argentina. Fundado por la familia González, nuestro restaurante busca ofrecer platos auténticos preparados con ingredientes frescos y recetas transmitidas de generación en generación.</p>
-                    <p>Desde nuestras empanadas criollas hasta el asado perfectamente cocido, cada bocado cuenta una historia de la cultura argentina.</p>
+                    <p>Damián y Anabel, llegaron a Barcelona con un sueño: compartir la auténtica comida tradicional argentina con el mundo. Desde empanadas criollas hasta pizzas caseras, cada plato está preparado con amor y los mejores ingredientes, siguiendo recetas que han pasado de generación en generación.</p>
+                    <p></p>
                 </div>
                 <div class="mision">
-                    <h2>Misión y Visión</h2>
-                    <p><strong>Misión:</strong> Brindar una experiencia gastronómica única que celebre los sabores y la calidez de Argentina, en un ambiente acogedor para todos.</p>
-                    <p><strong>Visión:</strong> Ser el referente de la cocina argentina en el mundo, llevando nuestra pasión por la comida a cada rincón.</p>
+                    <h2>Objetivo</h2>
+                    <p>Su objetivo es llevar un pedacito de Argentina a cada rincón de la ciudad, creando experiencias culinarias únicas para sus clientes.</p>
+                   
                 </div>
                 <div class="equipo">
                     <h2>Nuestro Equipo</h2>
-                    <p>Contamos con un equipo de chefs y personal apasionado por la gastronomía y el servicio. Cada miembro de Sabores Argentinos está comprometido en hacer de tu visita una experiencia inolvidable.</p>
+                    <p>Damián y Anabel, una pareja apasionada por los sabores de su tierra natal, Argentina.</p>
                 </div>
             </div>
         </section>
@@ -55,9 +55,9 @@
                 <img src="img/logo.png" alt="Logo Sabores Argentinos">
             </div>
             <div class="footer-info">
-                <p>Av. Corrientes 1234, Buenos Aires, Argentina</p>
-                <p>Tel: +54 11 1234-5678</p>
-                <p>Email: info@saboresargentinos.com</p>
+                <p>Rbla. de Catalunya 60, Olesa de Montserrat, Barcelona</p>
+                <p>Tel: +34</p>
+                <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
                 <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
@@ -65,7 +65,7 @@
                 <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
             </div>
         </div>
-        <p class="footer-copy">© 2025 Sabores Argentina. Todos los derechos reservados.</p>
+        <p class="footer-copy">©·2025·Los chicos argentinos.·Todos los derechos reservados.·</p>
     </footer>
 
     <script src="script.js"></script>
