--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <img src="img/logo.png" alt="Logo Sabores Argentinos">
+                <img src="img/logo.png" alt="Logo">
             </div>
             <div class="footer-info">
                 <p>Rambla de Catalunya, 60, 08640 (Olesa de Montserrat)</p>
@@ -67,7 +67,7 @@
     </footer>
 
     <script src="script.js"></script>
-    <a href="https://wa.me/1234567890?text=¡Hola!%20Quiero%20más%20información%20sobre%20Sabores%20Argentinos" class="whatsapp-btn" target="_blank">
+    <a href="https://wa.me/1234567890?text=¡Hola!%20Quiero%20más%20información%20sobre%20Los%20chicos%20argentinos" class="whatsapp-btn" target="_blank">
     <i class="fab fa-whatsapp"></i>
 </a>
 </body>
