--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="Logo">
+            <img src="img/logo.png" alt="Logo Los chicos argentinos">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -62,10 +62,10 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <img src="img/logo.png" alt="Logo">
+                <img src="img/logo.png" alt="Logo Los chicos argentinos">
             </div>
             <div class="footer-info">
-                <p>Rbla. de Catalunya 60, Olesa de MOntserrat, Barcelona</p>
+                <p>Rbla. de Catalunya 60, Olesa de Montserrat, Barcelona</p>
                 <p>Tel: +34</p>
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
