--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="Logo">
+            <img src="img/logo.png" alt="Logo Los chicos argentinos">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -50,7 +50,7 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <img src="img/logo.png" alt="Logo">
+                <img src="img/logo.png" alt="Logo Los chicos argentinos">
             </div>
             <div class="footer-info">
                 <p>Rambla de Catalunya, 60, 08640 (Olesa de Montserrat)</p>
@@ -63,7 +63,7 @@
                 <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
             </div>
         </div>
-        <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados·.</p>
+        <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
     </footer>
 
     <script src="script.js"></script>
