--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/logo.png" alt="Logo Sabores Argentinos">
+            <img src="img/logo.png" alt="Logo Los chicos argentinos">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -36,12 +36,12 @@
                     <ul>
                         <li>
                             <h3>Empanadas Criollas</h3>
-                            <p>Rellenas de  <bold>carne picada</bold>, <bold>cebolla</bold>,<bold> huevo y especias.</bold></p>
+                            <p>Rellenas de  <strong>carne picada</strong>, <strong>cebolla</strong>,<strong> huevo y especias.</strong></p>
                             <span>$1500</span>
                         </li>
                         <li>
                             <h3>Provoleta</h3>
-                            <p>Queso provolone fundido con <bold>orégano y chimichurri.</bold></p>
+                            <p>Queso provolone fundido con <strong>orégano y chimichurri.</strong></p>
                             <span>$2000</span>
                         </li>
                     </ul>
@@ -56,7 +56,7 @@
                         </li>
                         <li>
                             <h3>Milanesa Napolitana</h3>
-                            <p>Con <bold>salsa de tomate, mozzarella y guarnición</bold> a elección.</p>
+                            <p>Con <strong>salsa de tomate, mozzarella y guarnición</strong> a elección.</p>
                             <span>$3800</span>
                         </li>
                     </ul>
@@ -66,12 +66,12 @@
                     <ul>
                         <li>
                             <h3>Flan Casero</h3>
-                            <p>Con <bold>dulce de leche y crema chantilly.</bold></p>
+                            <p>Con <strong>dulce de leche y crema chantilly.</strong></p>
                             <span>$1200</span>
                         </li>
                         <li>
                             <h3>Alfajor de Maicena</h3>
-                            <p>Relleno de <bold>dulce de leche y coco rallado.</bold></p>
+                            <p>Relleno de <strong>dulce de leche y coco rallado.</strong></p>
                             <span>$800</span>
                         </li>
                     </ul>
@@ -86,7 +86,7 @@
                         </li>
                         <li>
                             <h3>Fernet con Cola</h3>
-                            <p>Clásico argentino, <bold>servido con hielo.</bold></p>
+                            <p>Clásico argentino, <strong>servido con hielo.</strong></p>
                             <span>$1000</span>
                         </li>
                     </ul>
@@ -98,11 +98,11 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <img src="img/logo.png" alt="Logo">
+                <img src="img/logo.png" alt="Logo Los chicos argentinos">
             </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya, Olesa de Montserrat, Barcelona</p>
-                <p>Tel: +34</p>
+                <p>Tel: 665641829</p>
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
@@ -111,7 +111,7 @@
                 <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
             </div>
         </div>
-        <p class="footer-copy">©·2025·Los chcios argentinos.·Todos los derechos reservados.·</p>
+        <p class="footer-copy">©·2025·Los chcios argentinos·.·Todos los derechos reservados.·</p>
     </footer>
 
     <script src="script.js"></script>
