--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <section class="hero">
             <div class="carrusel">
                 <div class="carrusel-imagenes">
-                    <img src="img/plato1.jpg" alt="Plato Argentino 1" class="active">
-                    <img src="img/plato2.jpg" alt="Plato Argentino 2">
-                    <img src="img/plato3.jpg" alt="Plato Argentino 3">
+                    <div class="img/plato1.jpg" alt="Empanadas" class="active">
+                    <div class="plato2.jpg" alt="Lomito">
+                    <div class="plato3.jpg" alt="Pizza">
                 </div>
                 <div class="carrusel-controles">
                     <button onclick="cambiarImagen(-1)">&#10094;</button>
@@ -49,7 +49,6 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <img src="img/logo.png" alt="Logo Los chicos argentinos">
             </div>
             <div class="footer-info">
                 <p>Rambla de Catalunya, 60, 08640 (Olesa de Montserrat)</p>
