--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <section class="hero">
             <div class="carrusel">
                 <div class="carrusel-imagenes">
-                    <div class="img/plato1.jpg" alt="Empanadas" class="active">
-                    <div class="plato2.jpg" alt="Lomito">
-                    <div class="plato3.jpg" alt="Pizza">
+                    <div class="plato1.jpg" alt="Empanadas" class="active">
+                    <div class="plato2.jpg" alt="Lomito" class="active">
+                    <div class="plato3.jpg" alt="Pizza" class="active">
                 </div>
                 <div class="carrusel-controles">
                     <button onclick="cambiarImagen(-1)">&#10094;</button>
