--- a/menu.html
+++ b/menu.html
@@ -31,17 +31,23 @@
             <h1>Nuestro Menú</h1>
             <div class="menu-contenedor">
                 <div class="categoria">
-                    <h2>Entradas</h2>
+                    <h2>Entrantes</h2>
                     <ul>
                         <li>
                             <h3>Empanadas Criollas</h3>
+                            <span>€</span>
+                            <h3>Empanadas "Gourmet"</h3>
+                            <span>€</span>
+                            <h3>Alitas</h3>
+                            <span>€</span>
+                            <h3></h3>
                             <p>Rellenas de  <strong>carne picada</strong>, <strong>cebolla</strong>,<strong> huevo y especias.</strong></p>
-                            <span>$1500</span>
+                            <span>€</span>
                         </li>
                         <li>
                             <h3>Provoleta</h3>
                             <p>Queso provolone fundido con <strong>orégano y chimichurri.</strong></p>
-                            <span>$2000</span>
+                            <span>€</span>
                         </li>
                     </ul>
                 </div>
@@ -51,12 +57,16 @@
                         <li>
                             <h3>Asado de Tira</h3>
                             <p>Acompañado de papas fritas y ensalada criolla.</p>
-                            <span>$4500</span>
+                            <span>€</span>
+                         <li>
+                            <h3>Pizzas</h3>
+                            <span>€</span>
+                        </li>
                         </li>
                         <li>
                             <h3>Milanesa Napolitana</h3>
-                            <p>Con <strong>salsa de tomate, mozzarella y guarnición</strong> a elección.</p>
-                            <span>$3800</span>
+                            <p>Con<strong>salsa de tomate, mozzarella y guarnición</strong>a elección.</p>
+                            <span>€</span>
                         </li>
                     </ul>
                 </div>
@@ -64,14 +74,24 @@
                     <h2>Postres</h2>
                     <ul>
                         <li>
-                            <h3>Flan Casero</h3>
-                            <p>Con <strong>dulce de leche y crema chantilly.</strong></p>
-                            <span>$1200</span>
+                            <h3>Alfajores</h3>
+                            <li>
+                                
+                            </li>
+                            <h3>Facturitas</h3>
+                            <h3>Pastafrola</h3>
+                                <li>
+                                    
+                                </li>
+                            <h3>Mate</h3>
+                                <span>€</span>
+                            <p>Con<strong>1/2 Docena de facturitas a elegir</strong></p>
+                            <span>€</span>
                         </li>
                         <li>
                             <h3>Alfajor de Maicena</h3>
                             <p>Relleno de <strong>dulce de leche y coco rallado.</strong></p>
-                            <span>$800</span>
+                            <span>€</span>
                         </li>
                     </ul>
                 </div>
@@ -81,12 +101,12 @@
                         <li>
                             <h3>Malbec Argentino</h3>
                             <p>Copa de vino tinto de Mendoza.</p>
-                            <span>$1500</span>
+                            <span>€</span>
                         </li>
                         <li>
                             <h3>Fernet con Cola</h3>
                             <p>Clásico argentino, <strong>servido con hielo.</strong></p>
-                            <span>$1000</span>
+                            <span>€</span>
                         </li>
                     </ul>
                 </div>
