--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div img src="logo.png" class="active">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -61,7 +61,7 @@
                 <a href="#"><img src="twitter.png" alt="Twitter"></a>
             </div>
         </div>
-        <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
+    <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
     </footer>
 
     <script src="script.js"></script>
