--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <section class="hero">
             <div class="carrusel">
                 <div class="carrusel-imagenes">
-                    <div img src="plato1.jpg" alt="Empanadas" class="active">
-                    <div img src="plato2.jpg" alt="Lomito" class="active">
-                    <div img src="plato3.jpg" alt="Pizza" class="active">
+                   <a href="#"> <div img src="plato1.jpg" alt="Empanadas" class="active">
+                    <a href="#"><div img src="plato2.jpg" alt="Lomito" class="active">
+                    <a href="#"><div img src="plato3.jpg" alt="Pizza" class="active">
                 </div>
                 <div class="carrusel-controles">
                     <button onclick="cambiarImagen(-1)">&#10094;</button>
