--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div img src="logo.png" class="active">
+        <a href="#"><div img src="logo.png" class="active">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
