--- a/menu.html
+++ b/menu.html
@@ -116,7 +116,8 @@
 
     <footer>
         <div class="footer-contenedor">
-            <div class="footer-logo">
+            <div 
+                <a href="#"> <img src="logo.png" class="footer-logo">
             </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya, Olesa de Montserrat, Barcelona</p>
@@ -124,9 +125,9 @@
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
             </div>
         </div>
         <p class="footer-copy">©·2025·Los chcios argentinos·.·Todos los derechos reservados.·</p>
