--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#"><div img src="logo.png" class="active">
+        <a href="#"><div img src="logo.png" alt="active" class="header-logo">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -48,7 +48,8 @@
 
     <footer>
         <div class="footer-contenedor">
-            <div class="footer-logo">
+            <div <a href="#" 
+                class="footer-logo">
             </div>
             <div class="footer-info">
                 <p>Rambla de Catalunya, 60, 08640 (Olesa de Montserrat)</p>
