--- a/contacto.html
+++ b/contacto.html
@@ -60,7 +60,7 @@
 
     <footer>
         <div class="footer-contenedor">
-            <a href="#" img src="logo.png class="active" <div class="footer-logo">
+            <a href="#" img src="logo.png" class="active" <div class="footer-logo">
             </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya 60, Olesa de Montserrat, Barcelona</p>
