--- a/contacto.html
+++ b/contacto.html
@@ -60,7 +60,9 @@
 
     <footer>
         <div class="footer-contenedor">
-            <a href="#" img src="logo.png" class="active" <div class="footer-logo">
+           <div class="footer-logo">
+    <a href="#"><img src="img/logo.png" alt="Logo"></a>
+</div> <div class="footer-logo">
  <div class="footer-logo">
             </div>
             <div class="footer-info">
