--- a/contacto.html
+++ b/contacto.html
@@ -49,9 +49,9 @@
                     <p><strong>Email:</strong> info@loschicosargentinos.com</p>
                     <h3>Síguenos en redes sociales</h3>
                     <div class="redes-sociales">
-                        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                        <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                        <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                        <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                        <a href="#"><img src="twitter.png" alt="Twitter"></a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
     <footer>
         <div class="footer-contenedor">
            <div class="footer-logo">
-    <a href="#"><img src="img/logo.png" alt="Logo"></a>
+    <a href="#"><img src="logo.png" alt="Logo"></a>
 </div> <div class="footer-logo">
  <div class="footer-logo">
             </div>
@@ -71,9 +71,9 @@
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
             </div>
         </div>
         <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
