Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        <a href="#"><div img src="logo.png" alt="active" class="header-logo">
+        <div class="logo">
+    <a href="#"><img src="img/logo.png" alt="Logo"></a>
+</div>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
