--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-    <a href="#"><img src="img/logo.png" alt="Logo"></a>
+    <a href="#"><img src="logo.png" alt="Logo"></a>
 </div>
         </div>
         <nav id="nav-menu" class="nav-menu">
