--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
 
     <main>
         <section class="hero">
-            <div class="carrusel">
-                <div class="carrusel-imagenes">
-                   <a href="#"> <div img src="plato1.jpg" alt="Empanadas" class="active">
-                    <a href="#"><div img src="plato2.jpg" alt="Lomito" class="active">
-                    <a href="#"><div img src="plato3.jpg" alt="Pizza" class="active">
-                </div>
+            <div class="carrusel-imagenes">
+    <img src="plato1.jpg" alt="Empanadas" class="active">
+    <img src="plato2.jpg" alt="Lomito">
+    <img src="plato3.jpg" alt="Pizza">
+</div>
                 <div class="carrusel-controles">
                     <button onclick="cambiarImagen(-1)">&#10094;</button>
                     <button onclick="cambiarImagen(1)">&#10095;</button>
