Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
     <footer>
         <div class="footer-contenedor">
-            <div <a href="#" 
-                class="footer-logo">
-            </div>
+            <div class="footer-logo">
+    <a href="#"><img src="logo.png" alt="Logo"></a>
+</div>
             <div class="footer-info">
                 <p>Rambla de Catalunya, 60, 08640 (Olesa de Montserrat)</p>
                 <p>Tel: +34</p>
