Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
 
     <main>
         <section class="hero">
-            <div class="carrusel-imagenes">
-    <img src="plato1.jpg" alt="Empanadas" class="active">
-    <img src="plato2.jpg" alt="Lomito">
-    <img src="plato3.jpg" alt="Pizza">
+            <div class="carrusel">
+    <div class="carrusel-imagenes">
+        <img src="img/plato1.jpg" alt="Empanadas" class="active">
+        <img src="img/plato2.jpg" alt="Lomito">
+        <img src="img/plato3.jpg" alt="Pizza">
+    </div>
+    <div class="carrusel-controles">
+        <button onclick="cambiarImagen(-1)">❮</button>
+        <button onclick="cambiarImagen(1)">❯</button>
+    </div>
 </div>
                 <div class="carrusel-controles">
                     <button onclick="cambiarImagen(-1)">&#10094;</button>
