--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <section class="hero">
             <div class="carrusel">
     <div class="carrusel-imagenes">
-        <img src="img/plato1.jpg" alt="Empanadas" class="active">
-        <img src="img/plato2.jpg" alt="Lomito">
-        <img src="img/plato3.jpg" alt="Pizza">
+        <img src="plato1.jpg" alt="Empanadas" class="active">
+        <img src="plato2.jpg" alt="Lomito">
+        <img src="plato3.jpg" alt="Pizza">
     </div>
     <div class="carrusel-controles">
         <button onclick="cambiarImagen(-1)">❮</button>
