--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,8 @@
 <body>
     <header>
         <div class="logo">
-        </div>
+    <a href="index.html"><img src="logo.png" alt="Logo"></a>
+</div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
