--- a/menu.html
+++ b/menu.html
@@ -117,9 +117,9 @@
 
     <footer>
         <div class="footer-contenedor">
-            <div 
-                <a href="#"> <img src="logo.png" class="footer-logo">
-            </div>
+           <div class="footer-logo">
+    <a href="index.html"><img src="logo.png" alt="Logo"></a>
+</div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya, Olesa de Montserrat, Barcelona</p>
                 <p>Tel: 665641829</p>
